# cookiecutter-python-standard

./: .gitignore  README.md  cookiecutter.json  makefile  pyproject.toml  requirements-dev.txt
{{cookiecutter.project_slug}}/: .editorconfig  makefile  pyproject.toml
{{cookiecutter.project_slug}}/app/: main.py
{{cookiecutter.project_slug}}/tests/: test_main.py
